Made focus slides visible, up/down swiper still broken

--- a/frontend/core/src/main/webapp/static/app/main/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/focusTasks.html
@@ -1,40 +1,34 @@
-<section id="focus-tasks" class="container-content" ng-controller="DatesController">
-  <div ng-if="!loading">
-    <div ng-if="isDatepickerVisible" class="row swiper-no-swiping" data-snap-ignore="true" datepicker></div>
-    <div class="swiper-container" swiper-container="tasks/home" swiper-type="page" expected-slides="7">
-      <div class="swiper-wrapper">
+<section class="container-content" ng-controller="DatesController">
+  <div ng-if="isDatepickerVisible" class="row swiper-no-swiping" data-snap-ignore="true" datepicker></div>
+  <div class="swiper-container" swiper-container="focus/tasks" swiper-type="page" expected-slides="7">
+    <div class="swiper-wrapper">
+      <!-- Swiper has for internal reasons, a previous week loader that is below the header  -->
+      <!-- NOTE: .loader renamed to .swiper-loader -->
+      <div class="swiper-loader row" id="pull-to-previous">
+        <span>previous week...</span>
+      </div>
+      <div class="swiper-slide" ng-repeat="date in detectDayChangeAndReturnWeekdays() track by date.weekdayIndex" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" scroll-to>
+        <h2 ng-hide="isDatepickerVisible" class="date-heading row" ng-click="setDatepickerVisible()">{{date.displayDate}}</h2>
+        <!-- list-item directive creates the content for this div -->
+        <!-- NOTE: needs more parameters, like list-item-has-star etc. -->
+        <div class="row" ng-repeat="task in tasks | tasksByDate:date.yyyymmdd" list-item="task" list-item-has-checkbox="true"></div>
 
-        <!-- Swiper has for internal reasons, a previous week loader that is below the header  -->
-        <!-- NOTE: .loader renamed to .swiper-loader -->
-        <div class="swiper-loader row" id="pull-to-previous">
-          <span>previous week...</span>
-        </div>
-        <div class="swiper-slide" ng-repeat="date in detectDayChangeAndReturnWeekdays() track by date.weekdayIndex" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" scroll-to>
-          <h3 ng-hide="isDatepickerVisible" class="date-heading row" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
-          <!-- list-item directive creates the content for this div -->
-          <!-- NOTE: needs more parameters, like list-item-has-star etc. -->
-          <div class="row" ng-repeat="task in tasks | tasksByDate:date.yyyymmdd" list-item="task" list-item-has-checkbox="true"></div>
-
-          <!-- When add task is activated, this should get a ".row-active" class -->
-          <!-- This would work if feature-container has the editable-field-backdrop / backdrop-container directive -->
-          <div class="row" ng-include="'static/app/tasks/addTask.html'"></div>
-          <div class="row" ng-if="tasks.length === 0">
-            <div class="instruction-text">
-              <p class="instruction-text-chapter">tasks are things<br/>you want <b>to do</b><br/><br/></p>
-            </div>
+        <!-- When add task is activated, this should get a ".row-active" class -->
+        <!-- This would work if feature-container has the editable-field-backdrop / backdrop-container directive -->
+        <div class="row" ng-include="'static/app/tasks/addTask.html'"></div>
+        <div class="row" ng-if="tasks.length === 0">
+          <div class="instruction-text">
+            <p class="instruction-text-chapter">tasks are things<br/>you want <b>to do</b><br/><br/></p>
           </div>
         </div>
+      </div>
 
-        <!-- Swiper has for internal reasons, a next week loader that is below the footer  -->
-        <!-- NOTE: .loader renamed to .swiper-loader -->
-        <div id="pull-to-next" class="loader">
-          <span>next week...</span>
-        </div>
+      <!-- Swiper has for internal reasons, a next week loader that is below the footer  -->
+      <!-- NOTE: .loader renamed to .swiper-loader -->
+      <div id="pull-to-next" class="loader">
+        <span>next week...</span>
       </div>
     </div>
   </div>
-
-  <!-- Instead of a content container, we have a page-loading-container -->
-  <!-- NOTE: Renamed .loading-animation to page-loading-container  -->
-  <div ng-if="loading" class="page-loading-container" loading-animation></div>
 </section>
+<footer class="container-content--after">notes -</footer>
