--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -5,6 +5,9 @@
         <a href ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
       </li>
       <li>
+        <a href class="feature-link" ng-class="getFeatureClass('focus')" ng-click="gotoFeature('focus')">focus</a>
+      </li>
+      <li>
         <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
       </li>
       <li>
