Tweaked front page layout to be in grid

--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -6,13 +6,11 @@
           <div class="container-content">
             <div class="group-instruction-jumbotron row">
               <p class="group-instruction--header"><span class="text-logo"></span></p>
-              <p class="group-instruction--main">
-                <span class="text-active">extend</span><br/>your<br/>biological<br/>mind
-              </p>
+              <p class="group-instruction--main"><span class="text-active">extend</span><br/>your<br/>biological<br/>mind</p>
             </div>
           </div>
           <footer class="container-content--after">
-            <div class="group-btn row">
+            <div class="group-btn">
               <button class="btn-action" ng-click="swipeToSignup()">
                 <span class="text-btn">sign up</span>
               </button>
