--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -36,6 +36,7 @@
 
   <script src="static/common/common.js"></script>
   <script src="static/common/DateService.js"></script>
+  <script src="static/common/DetectIosVersionService.js"></script>
   <script src="static/common/UUIDService.js"></script>
   <script src="static/common/calendarDirective.js"></script>
   <script src="static/common/dateInputDirective.js"></script>
