Removed swiper-prevent directive from tasks slides.

--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -1,4 +1,4 @@
-<section class="container-content" scroll-to swiper-prevent>
+<section class="container-content" scroll-to>
   <div ng-if="context" accordion>
     <div accordion-title="context" edit-item="editContext(context)" edit-item-inline="true" edit-item-fields="editContextFields(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
     <div ng-if="isOpen(context)" class="swiper-no-swiping" editable-field-container="auto">
