--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -1,4 +1,4 @@
-<section ng-init="newContext={title:undefined, tagType:'context'}" class="container-content" scroll-to swiper-prevent>
+<section ng-init="newContext={title:undefined, tagType:'context'}" class="container-content" scroll-to>
   <h3>contexts</h3>
   <ul>
     <li ng-show="contexts.length" ng-repeat="context in contexts">
