--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -1,4 +1,4 @@
-<section class="container-content" scroll-to swiper-prevent>
+<section class="container-content" scroll-to>
   <div infinite-scroll="addMoreRecentTasks()" infinite-scroll-parent accordion>
     <h2>recent</h2>
     <div ng-include="'static/app/tasks/addTask.html'"></div>
