--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -100,6 +100,10 @@
     </div>
 
   </div>
+  <!-- TODO: Toaster here -->
+  <!--div class="container-toaster">
+    <span class="text-toaster">editor toaster</span>
+  </div-->
 </div>
 
 
