Swipe day slides to clicked date in datepicker:  * SwiperService getSwiperActiveSlideIndex returns activeLoopIndex in loop mode and otherwise activeIndex  * only update date in active slide if it is no longer up to date

--- a/frontend/core/src/main/webapp/static/app/main/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/focusTasks.html
@@ -4,49 +4,49 @@
   <div class="swiper-container" swiper-container="datepicker" swiper-type="main" expected-slides="5" swiper-container-loop="true" data-snap-ignore="true">
     <div class="swiper-wrapper">
       <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="0">
-        <a href>{{datepickerWeeks[2][0].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][1].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][2].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][3].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][4].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][5].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][6].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
       </div>
       <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="1">
-        <a href>{{datepickerWeeks[0][0].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][1].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][2].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][3].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][4].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][5].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][6].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
       </div>
       <div class="swiper-slide group-link" swiper-slide="datepicker/middle" slide-index="2">
-        <a href>{{datepickerWeeks[1][0].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][1].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][2].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][3].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][4].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][5].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[1][6].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][0].yyyymmdd)">{{datepickerWeeks[1][0].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][1].yyyymmdd)">{{datepickerWeeks[1][1].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][2].yyyymmdd)">{{datepickerWeeks[1][2].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][3].yyyymmdd)">{{datepickerWeeks[1][3].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][4].yyyymmdd)">{{datepickerWeeks[1][4].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][5].yyyymmdd)">{{datepickerWeeks[1][5].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[1][6].yyyymmdd)">{{datepickerWeeks[1][6].displayDateShort}}</a>
       </div>
       <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="3">
-        <a href>{{datepickerWeeks[2][0].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][1].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][2].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][3].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][4].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][5].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[2][6].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
       </div>
       <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="4">
-        <a href>{{datepickerWeeks[0][0].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][1].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][2].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][3].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][4].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][5].displayDateShort}}</a>
-        <a href>{{datepickerWeeks[0][6].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+        <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
       </div>
     </div>
   </div>
