--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -38,9 +38,10 @@
         <div ng-if="isFeatureActive('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
         <div ng-if="isFeatureActive('settings')" ng-include="'static/app/account/settings.html'" include-replace></div>
       </div>
-      <div class="container-toaster">
+      <!-- TODO: Toaster directive -->
+      <!--div class="container-toaster">
         <span class="text-toaster">master toaster</span>
-      </div>
+      </div-->
     </div>
   </div>
 
