Rudimentary list item leave CSS animation with possibility to set initial timeout before starting animation.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -99,6 +99,7 @@
   <script src="static/app/tasks/TasksService.js"></script>
   <script src="static/app/tasks/snoozeDirective.js"></script>
   <script src="static/app/tasks/tasksByDateFilter.js"></script>
+  <script src="static/app/tasks/listItemLeaveAnimation.js"></script>
 
   <script src="static/app/notes/NotesController.js"></script>
   <script src="static/app/notes/NotesService.js"></script>
