Added caching of swiper loading, renamed container-content--outer into container-fluid--inner. Added container-content--outer as an intermediate div between slide and content.

--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -1,6 +1,6 @@
 <section id="entry" class="container-master" ng-controller="EntryController" vertical-resize="entry">
   <div class="container-fluid">
-    <div class="swiper-container container-content--outer" swiper-container="entry" swiper-type="main" expected-slides="((!entryState || entryState === 'signup')  && 2) || (entryState === 'login' && 3)">
+    <div class="swiper-container container-fluid--inner" swiper-container="entry" swiper-type="main" expected-slides="((!entryState || entryState === 'signup')  && 2) || (entryState === 'login' && 3)">
       <div class="swiper-wrapper">
         <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/home" slide-index=0>
           <div class="container-content">
