--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -34,13 +34,13 @@
       </div>
     </header>
 
-    <div ng-if="!editorHasSwiper" class="container-content--outer" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}">
+    <div ng-if="!editorHasSwiper" class="container-fluid--inner" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}">
       <div class="container-content">
       </div>
       <div class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight()}">footer</div>
     </div>
 
-    <div ng-if="editorHasSwiper" class="swiper-container container-content--outer" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}" swiper-container="{{editorType}}" swiper-type="editor" expected-slides="2">
+    <div ng-if="editorHasSwiper" class="swiper-container container-fluid--inner" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}" swiper-container="{{editorType}}" swiper-type="editor" expected-slides="2">
       <div class="swiper-wrapper">
         <div class="swiper-slide" swiper-slide="{{editorType}}/basic" slide-index="0">
 
