--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,25 +1,3 @@
-<!--div id="main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']">
-  <div id="menu" ng-include="'static/app/main/menu.html'"></div>
-  <div id="omnibar-drawer" class="omnibar-drawer" omnibar></div>
-
-  <div id="feature-container-wrapper" drawer>
-    <div master editable-field-backdrop>
-      <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
-      <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
-      <div ng-if="isFeatureActive('focus')" ng-include="'static/app/main/focusSlides.html'" include-replace></div>
-      <div ng-if="isFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
-      <div ng-if="isFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
-      <div ng-if="isFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
-      <div ng-if="isFeatureActive('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
-      <div ng-if="isFeatureActive('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
-      <div ng-if="isFeatureActive('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
-      <div ng-if="isFeatureActive('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
-      <div ng-if="isFeatureActive('settings')" ng-include="'static/app/account/settings.html'" include-replace></div>
-      <footer ng-include="'static/app/main/footer.html'"></footer>
-    </div>
-  </div>
-</div-->
-
 <div class="container-main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']" drawer="left">
   <div ng-include="'static/app/main/menu.html'" include-replace></div>
   <div ng-include="'static/app/main/editor.html'" include-replace></div>
@@ -27,16 +5,15 @@
     <div class="container-master" vertical-resize="master">
       <div class="container-fluid" ng-class="getFooterVisibilityClass()">
         <div ng-include="'static/app/main/toolbar.html'" include-replace></div>
-        <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
-        <div ng-if="isFeatureActive('focus')" ng-include="'static/app/main/focusSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
-        <div ng-if="isFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
-        <div ng-if="isFeatureActive('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
-        <div ng-if="isFeatureActive('settings')" ng-include="'static/app/account/settings.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('account')" ng-include="'static/app/account/account.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('focus')" ng-include="'static/app/main/focusSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
       </div>
       <!-- TODO: Toaster directive -->
       <!--div class="container-toaster">
