--- a/frontend/core/src/main/webapp/static/app/main/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/focusTasks.html
@@ -1,109 +1,110 @@
-<section class="container-content" ng-controller="DatesController">
-  <!-- <div ng-if="isDatepickerVisible" class="row swiper-no-swiping" data-snap-ignore="true" datepicker></div> -->
+<div ng-if="isFeatureActive('focus')"class="container-content--outer" drawer-handle="left">
+  <section class="container-content" ng-controller="DatesController">
+    <!-- <div ng-if="isDatepickerVisible" class="row swiper-no-swiping" data-snap-ignore="true" datepicker></div> -->
 
-  <div class="swiper-container" swiper-container="datepicker" swiper-type="main" expected-slides="5" swiper-container-loop="true" data-snap-ignore="true">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="0">
-        <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
-      </div>
-      <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="1">
-        <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
-      </div>
-      <div class="swiper-slide group-link" swiper-slide="datepicker/middle" slide-index="2">
-        <a href ng-click="dateClicked(datepickerWeeks[1][0].yyyymmdd)">{{datepickerWeeks[1][0].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][1].yyyymmdd)">{{datepickerWeeks[1][1].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][2].yyyymmdd)">{{datepickerWeeks[1][2].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][3].yyyymmdd)">{{datepickerWeeks[1][3].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][4].yyyymmdd)">{{datepickerWeeks[1][4].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][5].yyyymmdd)">{{datepickerWeeks[1][5].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[1][6].yyyymmdd)">{{datepickerWeeks[1][6].displayDateShort}}</a>
-      </div>
-      <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="3">
-        <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
-      </div>
-      <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="4">
-        <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
-        <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
+    <div class="swiper-container" swiper-container="datepicker" swiper-type="main" expected-slides="5" swiper-container-loop="true" data-snap-ignore="true">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="0">
+          <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
+        </div>
+        <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="1">
+          <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
+        </div>
+        <div class="swiper-slide group-link" swiper-slide="datepicker/middle" slide-index="2">
+          <a href ng-click="dateClicked(datepickerWeeks[1][0].yyyymmdd)">{{datepickerWeeks[1][0].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][1].yyyymmdd)">{{datepickerWeeks[1][1].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][2].yyyymmdd)">{{datepickerWeeks[1][2].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][3].yyyymmdd)">{{datepickerWeeks[1][3].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][4].yyyymmdd)">{{datepickerWeeks[1][4].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][5].yyyymmdd)">{{datepickerWeeks[1][5].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[1][6].yyyymmdd)">{{datepickerWeeks[1][6].displayDateShort}}</a>
+        </div>
+        <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="3">
+          <a href ng-click="dateClicked(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
+        </div>
+        <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="4">
+          <a href ng-click="dateClicked(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+          <a href ng-click="dateClicked(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="swiper-container" swiper-container="focus/tasks" swiper-type="page" expected-slides="5" swiper-container-loop="true">
-    <div class="swiper-wrapper">
+    <div class="swiper-container" swiper-container="focus/tasks" swiper-type="page" expected-slides="5" swiper-container-loop="true">
+      <div class="swiper-wrapper">
 
-      <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="0">
-        <div class="container-content">
-          <h1>{{daySlides[2].info}}</h1>
-          <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
-            {{task.title}}
+        <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="0">
+          <div class="container-content">
+            <h1>{{daySlides[2].info}}</h1>
+            <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
+              {{task.title}}
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1">
-        <div class="container-content">
-          <h1>{{daySlides[0].info}}</h1>
-          <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
-            {{task.title}}
+        <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1">
+          <div class="container-content">
+            <h1>{{daySlides[0].info}}</h1>
+            <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
+              {{task.title}}
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
-        <div class="container-content">
-          <h1>{{daySlides[1].info}}</h1>
-          <div ng-repeat="task in tasks | tasksByDate:daySlides[1].info" list-item="task" list-item-has-checkbox="true">
-            {{task.title}}
+        <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
+          <div class="container-content">
+            <h1>{{daySlides[1].info}}</h1>
+            <div ng-repeat="task in tasks | tasksByDate:daySlides[1].info" list-item="task" list-item-has-checkbox="true">
+              {{task.title}}
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
-        <div class="container-content">
-          <h1>{{daySlides[2].info}}</h1>
-          <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
-            {{task.title}}
+        <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
+          <div class="container-content">
+            <h1>{{daySlides[2].info}}</h1>
+            <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
+              {{task.title}}
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="4">
-        <div class="container-content">
-          <h1>{{daySlides[0].info}}</h1>
-          <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
-            {{task.title}}
+        <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="4">
+          <div class="container-content">
+            <h1>{{daySlides[0].info}}</h1>
+            <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
+              {{task.title}}
+            </div>
           </div>
         </div>
-      </div>
 
+      </div>
     </div>
-  </div>
-</section>
-<footer class="container-content--after">notes -</footer>
-
+  </section>
+  <footer class="container-content--after">notes -</footer>
+</div>
 
 
 <!-- Swiper has for internal reasons, a previous week loader that is below the header  -->
