--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -1,19 +1,21 @@
-<section class="container-content" scroll-to>
-  <div infinite-scroll="addMoreRecentTasks()" infinite-scroll-parent accordion>
-    <h2>recent</h2>
-    <div ng-include="'static/app/tasks/addTask.html'"></div>
-    <div ng-repeat="task in tasks | orderBy:'modified':true | limitTo: getRecentTasksLimit()" ng-init="newTask = {}">
-      <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-      <div ng-if="isOpen(task)" editable-field-container="auto">
-        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+<div class="container-content--outer" ng-if="isFeatureActive('tasks')" drawer-handle="left">
+  <section class="container-content" scroll-to>
+    <div infinite-scroll="addMoreRecentTasks()" infinite-scroll-container accordion>
+      <h2>recent</h2>
+      <div ng-include="'static/app/tasks/addTask.html'"></div>
+      <div ng-repeat="task in tasks | orderBy:'modified':true | limitTo: getRecentTasksLimit()" ng-init="newTask = {}">
+        <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+        <div ng-if="isOpen(task)" editable-field-container="auto">
+          <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
+          <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+        </div>
+      </div>
+      <div ng-if="notes.length === 0">
+        <div class="instruction-text">
+          <p class="instruction-text-chapter">notes are things you<br/>want to <b>remember</b><br/><br/></p>
+        </div>
       </div>
     </div>
-    <div ng-if="notes.length === 0">
-      <div class="instruction-text">
-        <p class="instruction-text-chapter">notes are things you<br/>want to <b>remember</b><br/><br/></p>
-      </div>
-    </div>
-  </div>
-</section>
-<footer class="container-content--after">recent tasks</footer>
+  </section>
+  <footer class="container-content--after">recent tasks</footer>
+</div>
