--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,7 +1,7 @@
-<div ng-show="isFeatureActive('tasks')" class="swiper-container container-content--outer" swiper-container="tasks" swiper-type="main" expected-slides="(loading && 1) || (!loading && 3)">
+<div ng-show="isFeatureActive('tasks')" class="swiper-container container-fluid--inner" swiper-container="tasks" swiper-type="main" expected-slides=3>
   <div class="swiper-wrapper">
-    <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/recent.html'" drawer-handle="left"></div>
-    <div ng-if="!loading" class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1 ng-include="'static/app/tasks/contexts.html'"></div>
-    <div ng-if="!loading" class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/context.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/recent.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1 ng-include="'static/app/tasks/contexts.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/context.html'"></div>
   </div>
 </div>
