List item animation and other fixes:  * defer list item leave animation with promise until editor is closed  * set correct max-height to .list-item-leave-add  * added list directive to control list item' animation state  * refactored list item directive and template  * removed to-be-deprecated replace attribute from list item directive

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -82,6 +82,7 @@
   <script src="static/app/base/drawerHandleDirective.js"></script>
   <script src="static/app/base/itemCoreFieldsDirective.js"></script>
   <script src="static/app/base/listDirective.js"></script>
+  <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/listItemLeaveAnimation.js"></script>
   <script src="static/app/base/registerElementToFeatureDirective.js"></script>
   <script src="static/app/base/scrollToDirective.js"></script>
