--- a/frontend/core/src/main/webapp/static/app/base/listItem.html
+++ b/frontend/core/src/main/webapp/static/app/base/listItem.html
@@ -1,8 +1,14 @@
 <div class="group-mixed">
-  <input ng-if="leftActionType === 'checkbox'" type="checkbox" ng-checked="leftActionChecked" swiper-click="leftAction()" ng-class="leftActionClass" icon-checkbox="{{item.uuid}}">
-  <a href swiper-click="itemAction()">
-    <span ng-if="leftActionType === 'indicator'" ng-class="leftActionClass"></span>
+
+  <div ng-if="leftAction" class="group-mixed--left">
+    <input ng-if="leftActionType === 'checkbox'" type="checkbox" ng-checked="leftActionChecked" swiper-click="leftAction()" ng-class="leftActionClass" icon-checkbox="{{item.uuid}}">
+  </div>
+
+  <a href class="group-mixed--middle" swiper-click="itemAction()">
     <span class="text-link" ng-bind="item.title"></span>
   </a>
-  <span ng-if="rightIndicatorClass" ng-class="rightIndicatorClass"></span>
+
+  <div ng-if="rightAction" class="group-mixed--right">
+    <span ng-if="rightIndicatorClass" ng-class="rightIndicatorClass"></span>
+  </div>
 </div>
